[metadata]
name = kabbes_the_garden
version = 0.3.0
author = James Kabbes
author_email = james.kabbes@gmail.com
description = A collection of all related kabbes packages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/kabbes_the_garden
project_urls =
    GitHub = https://github.com/jameskabbes/the_garden
    Documentation = https://jameskabbes.github.io/the_garden
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src