[metadata]
name = kabbes_garden
version = 0.3.0
author = James Kabbes
author_email = james.kabbes@gmail.com
description = Package for managing all other package releases
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/kabbes_garden
project_urls =
    GitHub = https://github.com/jameskabbes/garden
    Documentation = https://jameskabbes.github.io/garden
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src